# git-safepoint

./: .gitignore  README.md  git_safepoint.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  slack-notify.yml
adapters/: git-safepoint-preexec.zsh  pretooluse_hook.py
git_safepoint/: __init__.py  __main__.py  cli.py  destructive.py  engine.py  gitutil.py  ids.py  lock.py  mtimecache.py  secret.py
tests/: helpers.py  test_batch.py  test_cli.py  test_concurrency.py  test_debounce.py  test_destructive.py  test_gitutil.py  test_hook.py  test_ids.py  test_include_ignored.py  test_incremental.py  test_prune.py  test_restore.py  test_secret.py  test_snapshot.py
